# agentic_manager

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  biome.json  docker-compose.yml  ruff.toml
mcp-client/: Dockerfile  README.md  langgraph.json  pyproject.toml
mcp-client/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
mcp-client/eval/: dataset.json  dataset.preview.json  evaluate.py  generate_dataset.py  results.json
mcp-client/eval/OLD/: dataset.json  dataset.preview.json
mcp-client/eval/contexts/: 01_sales.txt  02_inventory.txt  03_customers.txt  04_knowledge.txt  05_multiagent.txt
mcp-client/src/: main.py
mcp-client/src/agent/: graph.py
mcp-client/src/api/v1/: __init__.py  chat.py  schemas.py  state.py  threads.py
mcp-client/src/core/: chat_persistence.py  config.py  db.py  error_handler.py  logger.py  ltm.py  pg.py  qdrant.py  redis.py  stm.py  tracing.py
mcp-client/src/declarative/: AgentSpec.py  agent_static.py  graph.py  hitl_middleware.py  mcp_tools.py  workflow.py
mcp-client/src/declarative/agents/: Aggregator.md  customer_support.md  general.md  inventory.md  knowledge.md  orchestrator.md  (+1 more)
mcp-client/src/models/: AgentOutput.py
mcp-client/src/workers/: __init__.py  tasks.py
mcp-server/: Dockerfile  README.md  alembic.ini  pyproject.toml
mcp-server/alembic/: env.py
mcp-server/alembic/versions/: 1eb62e3458f3_adding_fields_to_the_threads.py
mcp-server/dataset/: inventory_events.csv  knowledgebase.csv  order_items.csv  orders.csv  products.csv  refunds.csv  reviews.csv  users.csv
mcp-server/scripts/: generate_dataset.py  qdrant_seeder.py  seeder.py
mcp-server/src/: main.py
mcp-server/src/core/: config.py  time_utils.py
mcp-server/src/tools/: __init__.py
(+52 files in other folders)
