[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "pydantic>=2.13.4",
    "langgraph>=0.2",
    "langgraph-cli[inmem]>=0.1",
    "langgraph-sdk>=0.1",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1",
    "loguru>=0.7.3",
    "fastapi>=0.136.3",
    "uvicorn>=0.34.3",
    "langchain-core>=1.4.0",
]
